hacknight/static/css/app.css
/* ... */
.project-num44 {
  background-color: #743d30;
}

.project-num46 {
  background-color: red;
}

.project-num47 {
  background-color: #ff6600;
}

.project-num48 {
  background-color: yellow;
}

.project-num49 {
  background-color: green;
}

.project-num50 {
  background-color: blue;
}

.project-num51 {
  background-color: #856a91;
}

.project-num52 {
  background-color: pink;
}

.project-num53 {
  background-color: white;
}

.project-num54 {
  background-color: #9cef00;
}

.project-num55 {
  background-color: #009999;
}

.project-num56 {
  background-color: #ce0073;
}

.project-num57 {
  background-color: #878787;
}

.project-num58 {
  background-color: #143dab;
}

.project-num59 {
  background-color: #743d30;
}

.member-count {
  color: #856a91;
  font-style: italic;
}

@media (min-width: 980px) and (max-width: 1200px) {
  .participant .participant-img {
    width: 23px;
    height: 28px;
    margin-top: 0;
  }
  .participant .icon-4x {
    font-size: 22px;
  }
  .participant .participant-count {
    margin-top: -22px;
  }
}
@media (min-width: 768px) and (max-width: 979px) {
  .participant .participant-img {
    width: 20px;
    height: 28px;
    margin-left: 140px;
    display: inline-block;
    margin-left: 141px;
    margin-top: 30px;
    width: 20px;
  }
  .participant .icon-4x {
    font-size: 18px;
  }
  .participant .participant-count {
    margin-top: -30px;
    margin-left: 110px;
  }
  .participant .participant-name {
    margin-top: -55px;
  }

  .project-color-tab {
    width: 8px;
  }
}
.comment {
  list-style-type: none;
  margin-left: -20px;
  margin-bottom: 30px;
  border-top: 1px solid #242c33;
  padding-top: 10px;
}
.comment .comment-text {
  margin-left: 60px;
}
.comment .icon-share-alt {
  font-size: 9px;
  padding-left: 6px;
  padding-right: 3px;
}
.comment .com-date {
  font-size: 12px;
  font-style: italic;
}
.comment .dot {
  padding-left: 3px;
  padding-right: 6px;
  color: #a1a4a9;
  text-shadow: none;
}
.comment .commenter-name {
  text-shadow: 1px 1px #282828;
  color: #0087cf;
}
.comment .commenter-img {
  background-color: #b0603d;
  width: 46px;
  height: 45px;
  color: white;
  float: left;
  border-radius: 5px;
  padding-top: 2px;
}
.comment .commenter-img i {
  position: relative;
  left: 8px;
}
.comment .com-vote {
  float: left;
}
.comment .com-header {
  float: left;
}
.comment .com-body {
  margin-top: 5px;
  text-shadow: 1px 1px #282828;
  color: #efefef;
}
.comment .com-children {
  margin-top: 20px;
  margin-left: 80px;
}
.comment .com-children .comment-text {
  margin-left: 45px;
}
.comment .com-children .commenter-img {
  background-color: #856a91;
  width: 32px;
  padding-left: 2px;
  height: 30px;
  font-size: 8px;
  margin-right: -30px;
}
.comment .com-children .commenter-img i {
  position: relative;
  left: 6px;
}
.comment .com-children .com-children .commenter-img {
  width: 32px;
  background-color: #666666;
}
.comment .com-children .com-children .com-children .commenter-img {
  background-color: #2b4256;
}
.comment .com-footer a, .comment .com-footer i {
  font-size: 12px;
  color: #a1a4a9;
  text-shadow: none;
}
.comment .com-footer a:hover {
  text-decoration: none;
  color: #b0603d;
}
.comment .com-footer i:hover {
  text-decoration: none;
}

.sidebar {
  border-bottom: #454e59 1px solid;
  -moz-box-shadow: inset 0 2px 3px #1c2126;
  -webkit-box-shadow: inset 0 2px 3px #1c2126;
  box-shadow: inset 0 2px 3px #1f2124;
  border-radius: 5px;
  margin-bottom: 20px;
  background: #242930;
}
.sidebar .nav.nav-list:first-child {
  margin-top: -1px;
}
.sidebar.nav.nav-list {
  padding-top: 12px;
  padding-bottom: 16px;
}
.sidebar .pager {
  margin-bottom: 0;
}

.share ul {
  margin: 0;
  display: block;
  clear: both;
  margin-bottom: 70px;
}
.share ul .nav-list {
  padding-left: 4px;
}
.share li {
  list-style-type: none;
  list-style-position: outset;
  position: relative;
  float: left;
  margin: 5px;
  border-radius: 50%;
  border: 2px solid #151a21;
  -moz-box-shadow: 0 2px 3px #1c2126;
  -webkit-box-shadow: 0 2px 3px #1c2126;
  box-shadow: 0 2px 3px #1c2126;
  background: #242930;
  width: 35px;
  height: 35px;
}
.share li a {
  position: relative;
  float: left;
  font-size: 1.4em;
  padding-left: 0px;
  padding-top: 4px;
  padding-right: 7px;
  padding-bottom: 5px;
  border-radius: 50%;
  border-top: 1px solid #2f353f;
  width: 28px;
  height: 28px;
}
.share li a span {
  position: absolute;
  left: 0.4em !important;
  top: 0.3em !important;
}
.share .btn {
  color: #065ec1;
  text-shadow: none;
}

.btn-dark.active {
  color: #065ec1;
}

.btn-dark {
  background-color: #171a20;
  background-image: -moz-linear-gradient(top, #2c313b, #171a20);
  background-image: -ms-linear-gradient(top, #2c313b, #171a20);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#2c313b), to(#171a20));
  background-image: -webkit-linear-gradient(top, #2c313b, #171a20);
  background-image: -o-linear-gradient(top, #2c313b, #171a20);
  background-image: linear-gradient(top, #2c313b, #171a20);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2C313B', endColorstr='#171A20', GradientType=0);
  border: none;
  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
}

.btn-dark:hover, .btn-dark:active, .btn-dark.active, .btn-dark.disabled, .btn-dark[disabled] {
  background-color: #171a20;
  color: #efefef;
}

.btn-dark:active, .btn-dark.active {
  background-color: #003399 \9;
}

.nav-list > li {
  padding-right: 14px;
}

.nav-list > li > a, .nav-list .nav-header {
  margin-left: -14px;
  margin-right: -28px;
  padding: 0 14px;
  text-shadow: none;
}

.nav-list .nav-header {
  padding-top: 5px;
  padding-bottom: 2px;
}

.nav-list > li > a [class^="icon-"]::before, .nav-list > li > a [class*=" icon-"]::before {
  color: #bcc6cc;
}

.nav > li > a:hover {
  background-color: #0e0f11;
  color: #bcc6cc;
}
/* ... */

